<resources>
    <string name="app_name">United Nurse Assistant App</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu"></string>
    <string name="Search_For_Existing_Patients">Search Existing Patients</string>
    <string name="Add_New_Patient">Add New Patient</string>
    <string name="Patient_Map">Patient Map</string>
    <string name="united_logo_hint">United Logo</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_patient_map">Map</string>
    <string name="title_activity_patient_data">Patient Data</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_patient_search">PatientSearchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_weight">Weight</string>
</resources>
