<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="false"
                                                 tools:context="com.united.app.LoginActivity"
                                                 android:id="@+id/tool">

    <!-- Login progress -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="false">


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                android:elevation="6dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:weightSum="1"
                android:layout_weight="0.11"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="22dp"
                android:layout_gravity="bottom"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="United Nurse Assistant App"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/colorTextLight"
                        android:textAlignment="textStart"
                        android:id="@+id/toolbar_title"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:layout_weight="0.06"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentTop="true"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:orientation="vertical"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentEnd="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#eccb84"
                    android:drawableTint="#eb7a0f"
                    android:capitalize="words"
                    android:textAllCaps="false"
                    android:enabled="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_below="@+id/toolbar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="openPatientSearchActivity"


                    />

            </LinearLayout>

            <ImageView
                android:layout_width="173dp"
                android:layout_height="163dp"
                android:id="@+id/imageView"
                android:src="@mipmap/united_logo"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/loginForm"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"/>

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
