<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.united.app.MainMenuActivity"
    android:id="@+id/tool">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/button4"
        android:layout_below="@+id/button4"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                android:elevation="6dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:weightSum="1"
                android:layout_weight="0.06"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="328dp"
                        android:layout_height="match_parent"
                        android:text="Main Menu (midwife login)"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/colorTextLight"
                        android:textAlignment="textStart"
                        android:id="@+id/toolbar_title"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:layout_toLeftOf="@+id/imageView2"
                        android:layout_toStartOf="@+id/imageView2"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@mipmap/united_logo_grey"
                        android:contentDescription="United logo"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/search_icon"
                android:text="@string/Search_For_Existing_Patients"
                android:textAlignment="textStart"
                android:backgroundTint="#eccb84"
                android:drawableTint="#eb7a0f"
                android:capitalize="words"
                android:textAllCaps="false"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="openPatientSearchActivity"/>

            <Button
                android:id="@+id/newPatientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add_new_patient"
                android:text="@string/Add_New_Patient"
                android:textAlignment="textStart"
                android:capitalize="none"
                android:textAllCaps="false"
                android:backgroundTint="#eccb84"
                android:drawableTint="#eb7a0f"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/searchButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="openPatientDataActivity"/>

            <Button
                android:id="@+id/patientMapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/map"
                android:text="@string/Patient_Map"
                android:textAlignment="textStart"
                android:capitalize="none"
                android:textAllCaps="false"
                android:backgroundTint="#eccb84"
                android:drawableTint="#eb7a0f"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/newPatientButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="openPatientMapActivity"/>

            <Button
                android:id="@+id/LogOutBurron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/logout_icon"
                android:text="@string/log_out"
                android:textAlignment="textStart"
                android:capitalize="none"
                android:textAllCaps="false"
                android:backgroundTint="#eccb84"
                android:enabled="true"
                android:textColor="@color/colorPrimaryDark"
                android:contextClickable="true"
                android:onClick="sessionLogout"
                android:layout_below="@+id/patientMapButton"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Notifications"
                android:id="@+id/notificationHeader"
                android:layout_marginTop="27dp"
                android:layout_below="@+id/LogOutBurron"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/colorPrimary"
                android:ellipsize="start"
                android:elegantTextHeight="false"
                android:singleLine="true"
                android:id="@+id/notificationLine"
                android:layout_above="@+id/notificationArea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.73"
                android:id="@+id/notificationArea"
                android:minHeight="108dp"
                android:layout_below="@+id/notificationHeader"
                android:layout_alignLeft="@+id/notificationLine"
                android:layout_alignStart="@+id/notificationLine"
                android:weightSum="1">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:background="#F3F3F3"
                                android:layout_marginTop="10dp"
                                android:textAlignment="center">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="8dp"
                        android:src="@mipmap/ok_icon"
                        android:layout_marginRight="4dp"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/imageView3"
                        android:text="All patient data was successfully uploaded"
                        android:textSize="14dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:background="#F3F3F3"
                                android:layout_marginTop="10dp"
                                android:textAlignment="center">

                    <!-- icon -->
                    <ImageView
                        android:id="@+id/item_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="8dp"
                        android:src="@mipmap/info_icon"
                        android:layout_marginRight="4dp"/>

                    <!-- title -->
                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/item_icon"
                        android:text="3 pending appoinments"
                        android:textSize="14dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="© United Projects 2016"
                android:id="@+id/copyrightBar"
                android:textColor="@color/colorTextLight"
                android:textAllCaps="false"
                android:background="@color/colorPrimaryDark"
                android:textSize="10dp"
                android:layout_alignLeft="@+id/notificationArea"
                android:layout_alignStart="@+id/notificationArea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:gravity="center|center_horizontal|fill"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_below="@+id/notificationArea"
                android:layout_alignRight="@+id/notificationArea"
                android:layout_alignEnd="@+id/notificationArea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:id="@+id/space2"/>

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
